added april 1 arxiv link

--- a/index.html
+++ b/index.html
@@ -854,6 +854,19 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
         <div class="row">
           <div class="col-lg-12">
             <ul class="timeline">
+		      <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="img/projects/april1arxiv.png" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="subheading">April Fools Day arXiv Papers</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Check out the collection at <a href="http://april1arxiv.github.io/">http://april1arxiv.github.io/</a></p>
+                  </div>
+                </div>
+              </li>
               <li>
                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="img/projects/vr.jpg" alt="">
