--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
 
 
     <!-- Miscellaneous -->
-    <section class="bg-light"  id="projects">
+    <section class="bg-light"  id="misc">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
