--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
 	</script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Philip Mocz, theoretical astrophysicist and NASA Einstein Fellow at Princeton University">
-    <meta name="keywords" content="Philip Mocz, Astrophysics, Cosmology, Computational Physics, Einstein Fellow, Princeton University">
+    <meta name="description" content="Philip Mocz, theoretical astrophysicist at Princeton University">
+    <meta name="keywords" content="Philip Mocz, Astrophysics, Cosmology, Computational Physics, Einstein Fellow, Lyman Spitzer Jr. Fellow, Princeton University">
     <meta name="author" content="Philip Mocz">
     <meta name="title" content="Philip Mocz">
     <meta itemprop="name" content="Philip Mocz">
-    <meta itemprop="description" content="Philip Mocz, theoretical astrophysicist and NASA Einstein Fellow at Princeton University">
+    <meta itemprop="description" content="Philip Mocz, theoretical astrophysicist at Princeton University">
     <meta itemprop="image" content="http://pmocz.github.io/img/people/philip_mocz.jpg">
     <meta property="og:url" content="https://www.pmocz.github.io">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Philip Mocz">
     <meta property="og:site_name" content="Philip Mocz">
-    <meta property="og:description" content="Philip Mocz, theoretical astrophysicist and NASA Einstein Fellow at Princeton University">
+    <meta property="og:description" content="Philip Mocz, theoretical astrophysicist at Princeton University">
     <meta property="og:image" content="https://pmocz.github.io/img/people/philip_mocz.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Philip Mocz">
     <meta name="twitter:site" content="@PMocz">
-    <meta name="twitter:description" content="Philip Mocz, theoretical astrophysicist and NASA Einstein Fellow at Princeton University">
+    <meta name="twitter:description" content="Philip Mocz, theoretical astrophysicist at Princeton University">
     <meta name="twitter:image:alt" content="Philip Mocz">
     <meta name="twitter:image" content="https://pmocz.github.io/img/people/philip_mocz.jpg">
     <meta name="MobileOptimized" content="width">
@@ -53,7 +53,7 @@
         "https://github.com/pmocz/",
         "https://pmocz.github.io"
       ],
-      "jobTitle": "NASA Einstein Fellow",
+      "jobTitle": "Astrophysicist",
       "worksFor": {
         "@type": "Organization",
         "name": "Princeton University"
@@ -143,7 +143,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-heading">Philip Mocz</div>
-          <div class="intro-lead-in">Einstein Fellow at <a href = "http://web.astro.princeton.edu/">Princeton University</a></div>  
+          <div class="intro-lead-in">NASA Einstein and Lyman Spitzer, Jr. Postdoctoral Fellow at <a href = "http://web.astro.princeton.edu/">Princeton University</a></div>  
             <div class="team-member">
           			<img class="rounded-circle img-fluid" src="img/people/philip_mocz.jpg" alt="">
 			</div>	
@@ -200,29 +200,31 @@
         </div>
         <div class="col-lg-12 text-justify text-muted">
 			
+			<!-- I consider myself a leading expert on computational methods for astrophysics and applying them to solve challenging problems in cosmology and turbulence.  -->
+			
 			<p>
 			  I am a <a 
 			  href="http://cxc.harvard.edu/fellows/fellowslist.html"> 
-			  NASA Einstein Fellow</a> at <a 
+			  NASA Einstein Fellow</a> and <a href="https://web.astro.princeton.edu/people/philip-mocz" > Lyman Spitzer, Jr. Postdoctoral Fellow</a> at <a 
 			  href="https://web.astro.princeton.edu/">Department of 
 			  Astrophysical Sciences</a> at <a 
 			  href="https://www.princeton.edu/">Princeton 
 			  University</a>. I develop theory and high-performance 
 			  simulations to study structure formation on scales from 
-			  cosmology to star formation. I am at the forefront of 
+			  cosmology to star formation. 
+			  I am at the forefront of 
 			  research in <a 
 			  href="https://physics.aps.org/synopsis-for/10.1103/PhysRevLett.123.141301"> 
-			  fuzzy dark matter</a>, which has seen considerably 
+			  fuzzy dark matter</a>, which has seen considerable 
 			  growing interest in the physics and astronomy communities 
 			  over the last few years. The near-century-old dark matter 
 			  problem is one of the most intriguing mysteries in modern 
 			  physics: we do not know the nature of 84 percent of 
 			  matter in the Universe, yet it is thought to govern 
 			  cosmic structure and hold galaxies together. Ultralight 
-			  (fuzzy) dark matter is a promising candidate, and I have 
-			  created the first cosmological simulations of this type 
-			  of dark matter fully coupled to baryonic physics. With my 
-			  work, I can learn about the behavior of the theory and 
+			  (fuzzy) dark matter is a promising candidate, and I consider 
+			  myself a leading expert in developing cosmological simulations of this type 
+			  of dark matter fully coupled to baryonic physics. With these simulations, we can learn about the behavior of the theory and 
 			  predict how future missions such as the <a 
 			  href="https://www.jwst.nasa.gov/">James Webb Space 
 			  Telescope</a> could reveal the nature of the elusive dark 
@@ -237,14 +239,14 @@
 			  
 			<p>
 			  I also develop a variety of new robust, high-performance 
-			  methods for computational physics. My PhD thesis was 
+			  methods for computational physics which I use in my every day work. My PhD thesis was 
 			  completed at <a href="https://www.harvard.edu/">Harvard 
 			  University</a> with my advisor <a 
 			  href="http://astronomy.fas.harvard.edu/people/lars-hernquist">Lars 
 			  Hernquist</a> on moving mesh magnetohydrodynamics and 
 			  applications to cosmology and star formation. As part of 
 			  that work, I invented a new accurate method for solving 
-			  the magnetohydrodynamic equations on a moving-mesh in the 
+			  the magnetohydrodynamic equations on a moving-mesh, which I implemented in the 
 			  <a 
 			  href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a> 
 			  code. The method preserves mass, momentum, energy, the 
@@ -270,6 +272,7 @@
             <p>
 			<center>
             <a href="https://web.astro.princeton.edu/"><img class="img-fluid" style="height:60px;" src="img/princeton.png" alt=""></a>
+            <a href="https://astronomy.fas.harvard.edu/"><img class="img-fluid" style="height:60px;" src="img/harvard.png" alt=""></a>
             <a href="https://www.nasa.gov/"><img class="img-fluid" style="height:60px;" src="img/nasa.png" alt=""></a>
             <a href="https://www.nsf.gov/"><img class="img-fluid" style="height:60px;" src="img/nsf.png" alt=""></a>
             <a href="https://www.xsede.org/"><img class="img-fluid" style="height:60px;" src="img/xsede2.png" alt=""></a>
