added medium link

--- a/index.html
+++ b/index.html
@@ -899,13 +899,26 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Miscellaneous</h2>
-            <h3 class="section-subheading text-muted">A list of software projects, interactive modules, tutorials, mini science investigations ...</h3>
+            <h3 class="section-subheading text-muted">Writings, software projects, interactive modules, tutorials, mini science investigations ...</h3>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-12">
             <ul class="timeline">
 		      <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="img/projects/pic.gif" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="subheading">Writings on Medium</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">~100 line Python tutorials for computational astro <a href="https://medium.com/@philip.mocz">https://medium.com/@philip.mocz</a></p>
+                  </div>
+                </div>
+              </li>
+              <li>
                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="img/projects/april1arxiv.png" alt="">
                 </div>
@@ -914,7 +927,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
                     <h4 class="subheading">April Fools Day arXiv Papers</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Check out the collection at <a href="http://april1arxiv.github.io/">http://april1arxiv.github.io/</a></p>
+                    <p class="text-muted">Check out the collection at <a href="http://april1arxiv.github.io">http://april1arxiv.github.io</a></p>
                   </div>
                 </div>
               </li>
@@ -981,7 +994,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
                     <h4 class="subheading">SPH for Stellar Structure</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">A simple <a href="manuscripts/pmocz_sph.pdf">introduction (.pdf)</a> to smoothed-particle hydrodynamics (SPH), if you ever wanted to code your own! </p>
+                    <p class="text-muted">A simple <a href="manuscripts/pmocz_sph.pdf">introduction (.pdf)</a> to smoothed-particle hydrodynamics (SPH), and writing your own code </p>
                   </div>
                 </div>
               </li>
