--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
             <h3 class="section-subheading text-muted">List and links to selected outreach activities</h3>
             <div class="col-lg-12 text-left">
             <ul>
-				<li><a href="https://www.skypeascientist.com/">Skype A Scientist</a> 2020</li>
+				<li><a href="https://www.skypeascientist.com/">Skype A Scientist</a>. 2020</li>
 				<li><a href="https://undergraduateresearch.princeton.edu/programs/summer-programs/princeton-astrophysics-undergraduate-summer-research-program">Princeton Astrophysics Undergraduate Summer Research Program</a> Mentor. 2019, 2020</li>
 				<li>Harvard Astronomy Department Peer Mentor. 2015-2017</li>
 				<li><a href="https://library.cfa.harvard.edu/">Harvard-Smithsonian CfA Wolbach Library Committee</a> Graduate Student Representative. 2015-2017</li>
