--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
                     <h4 class="subheading">Writings on Medium</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">~100 line Python tutorials for computational astro <a href="https://medium.com/@philip.mocz">https://medium.com/@philip.mocz</a></p>
+                    <p class="text-muted">~100 line Python tutorials for computational astro <a href="https://philip-mocz.medium.com/">https://philip-mocz.medium.com/</a></p>
                   </div>
                 </div>
               </li>
