--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 
   <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-R7JH7J93T8"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136974463-1"></script>
 	<script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 	
-	gtag('config', 'G-R7JH7J93T8');
+	gtag('config', 'UA-136974463-1');
 	</script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
