added name pronounce

--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/people/philip_mocz.jpg" alt="">
               <h4>Philip Mocz</h4>
-              <p class="text-muted">Einstein Fellow</p>
+              <p class="text-muted">Einstein & Spitzer Fellow</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://twitter.com/PMocz">
@@ -1068,10 +1068,12 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
               <li>4 Ivy Lane</li>
               <li>Princeton, NJ 08544, USA</li>
             </ul>
+            <p class="text-muted">Philip Mocz pronounced:&nbsp;
+            <audio controls=""><source src="philip_mocz_pronunciation.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></p>
           </div> 
           <div class="col-sm-4 text-center">
 		  <a href="https://twitter.com/PMocz"> <i>Twitter feed:</i> </a>
-          <a class="twitter-timeline" data-height="600" href="https://twitter.com/PMocz?ref_src=twsrc%5Etfw">Tweets by PMocz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <a class="twitter-timeline" data-height="640" href="https://twitter.com/PMocz?ref_src=twsrc%5Etfw">Tweets by PMocz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
           <div class="col-sm-4 text-center">
 			<!-- Instagram Feed -->		
