--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
               </ul>
             </div>
 			<p> </p>
-            <p> <a href="mailto:pmocz@astro.princeton.edu"><img src="img/mail-icon.png" style="width:1em;margin-right:.5em;" alt="">pmocz@astro.princeton.edu</a> </p>
+            <p> <a href="mailto:mocz1@llnl.gov"><img src="img/mail-icon.png" style="width:1em;margin-right:.5em;" alt="">mocz1@llnl.gov</a> </p>
             <a href="https://orcid.org/0000-0001-6631-2566" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-6631-2566</a>
             <p> </p>
             <ul class="list-inline">
