--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="shortcut icon" href="img/princeton.ico">
+<link rel="shortcut icon" href="img/llnl-logo.png">
 <html lang="en">
 
   <head>
