--- a/index.html
+++ b/index.html
@@ -700,6 +700,9 @@
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/amin.jpg" alt=""> <br>
 Mustafa A. Amin <br>   <a href="http://mustafa-amin.com/">Rice</a>   </div>
 
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/beattie.jpg" alt=""> <br>
+James Beattie<br>   <a href="https://astrojames.github.io/">ANU</a>   </div>
+
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/becerra.jpg" alt=""> <br>
 Fernando Becerra <br>   <a href="http://fernandobecerra.com/">Harvard</a>   </div>
 
@@ -719,7 +722,7 @@ Blakesley Burkhart <br>   <a href="http://www.mhdturbulence.com/Home.html">Rutge
 Pierre-Henri Chavanis <br>   <a href="http://www.lpt.ups-tlse.fr/spip.php?article23&lang=en">Toulouse</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/christian.jpg" alt=""> <br>
-Pierre Christian <br>   <a href="http://www.pierrechristian.com/">U. Arizona</a>   </div>
+Pierre Christian <br>   <a href="http://www.pierrechristian.com/">Fairfield University</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/church.jpg" alt=""> <br>
 Ben Church <br>   <a href="https://www.college.columbia.edu/node/12747">Columbia</a>   </div>
@@ -729,6 +732,9 @@ Elliot Davies <br>   <a href="https://web.astro.princeton.edu/people/elliot-davi
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/afabian.jpg" alt=""> <br>
 Andy Fabian <br>   <a href="http://www.csap.cam.ac.uk/network/andrew-fabian/">Cambridge</a>   </div>
+
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/federrath.jpg" alt=""> <br>
+Christoph Federrath <br>   <a href="https://www.mso.anu.edu.au/~chfeder/index.html">ANU</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/fialkov.jpg" alt=""> <br>
 Anastasia Fialkov <br>   <a href="https://www.cfa.harvard.edu/~afialkov/">Cambridge</a>   </div>
@@ -762,6 +768,9 @@ Yoni Kahn <br>   <a href="http://yonatan-kahn.squarespace.com/">Illinois</a>   <
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/kannan.jpg" alt=""> <br>
 Rahul Kannan <br>   <a href="https://itc.cfa.harvard.edu/people/rahul-kannan">Harvard</a>   </div>
+
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/klessen.jpg" alt=""> <br>
+Ralf Klessen <br>   <a href="http://klessen.org/">Heidelberg University</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/lai.jpg" alt=""> <br>
 Shih-Ping Lai <br>   <a href="http://phys.site.nthu.edu.tw/p/406-1335-58835,r3606.php?Lang=en">Tsing Hua</a>   </div>
@@ -816,6 +825,9 @@ Volker Springel <br>   <a href="https://www.imprs-astro.mpg.de/content/prof-dr-v
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/succi.jpg" alt=""> <br>
 Sauro Succi <br>   <a href="https://www.iit.it/people/sauro-succi">Harvard/IIT</a>   </div>
+
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/szasz.jpg" alt=""> <br>
+Aaron Szasz<br>   <a href="https://perimeterinstitute.ca/people/aaron-szasz">Perimeter</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/vogelsberger.jpg" alt=""> <br>
 Mark Vogelsberger <br>   <a href="http://web.mit.edu/physics/people/faculty/vogelsberger_mark.html">MIT</a>   </div>
