--- a/index.html
+++ b/index.html
@@ -210,32 +210,29 @@
 			
 			<p>
 			  I am a Computational Physicist at <a href = "https://www.llnl.gov/">Lawrence Livermore National Laboratory</a>. 
-			  I work on advancing the state of the art in large-scale multi-physics simulation, in particular
-			  developing high-performance code for magnetohydrodynamics simulations.
-			  I am also interested in simulating quantum systems in cosmology, such as <a 
+			  I design high-performance multi-physics simulation code, in particular
+			  high-order Arbitrary Lagrangian-Eulerian (ALE) finite element methods for magnetohydrodynamics (MHD) simulations.
+			  I also push the frontiers of simulating quantum systems in cosmology, such as <a 
 			  href="https://physics.aps.org/synopsis-for/10.1103/PhysRevLett.123.141301"> 
 			  fuzzy dark matter</a>.
 			</p>
 			  
 			<p>
-			  I develop a variety of new robust, high-performance 
-			  methods for computational physics. My PhD thesis was 
-			  completed at <a href="https://www.harvard.edu/">Harvard 
-			  University</a> with my advisor <a 
-			  href="http://astronomy.fas.harvard.edu/people/lars-hernquist">Lars 
-			  Hernquist</a> on moving mesh magnetohydrodynamics and 
-			  applications to cosmology and star formation. As part of 
-			  that work, I invented a new accurate method for solving 
-			  the magnetohydrodynamic equations on a moving-mesh, which I implemented in the 
-			  <a 
-			  href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a> 
-			  code. The method preserves mass, momentum, energy, the 
-			  divergence-free property of the magnetic fields, and 
-			  Galilean-invariance (exact advection). 
+			  I received my PhD in Astrophysics 2017 from 
+			  <a href="https://www.harvard.edu/">Harvard 
+			  University</a>
+			  under the advisorship of <a href="http://astronomy.fas.harvard.edu/people/lars-hernquist">Lars 
+			  Hernquist</a>. I designed a finite volume moving mesh MHD code,
+			  and applied it to study structure formation and magnetic field growth in 
+			  the interstellar medium and in cosmological settings.
+			  My physics modules were implemented into the 
+			  <a href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a> 
+			  code.
+			  I received an AB in Mathematics and Astrophysics in 2012 from Harvard.
 			</p>
 			
 			<p>
-			  I have broad interests in multi-physics simulations,
+			  My broad interests include multi-physics simulations,
 			  cosmology, galaxy evolution, black hole physics,
 			  turbulence, numerical methods, 
 			  computer visualization, and machine learning/AI. 
@@ -1087,7 +1084,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <span class="copyright">&copy;2012-2021 Philip Mocz</span>
+            <span class="copyright">&copy;2012-2022 Philip Mocz</span>
           </div>
         </div>
       </div>
