--- a/index.html
+++ b/index.html
@@ -296,6 +296,11 @@
        
             <h3 class="section-heading">Selected Recent Papers <a href="my-feed.rss.xml"><img border="0" alt="Subscribe to What's New" src="img/fZIDSoj.png" width="20" height="20"></h3>
 				<p>
+				<a href="https://ui.adsabs.harvard.edu/abs/2021ApJ...910...29M/abstract"> Toward Cosmological Simulations of Dark Matter on Quantum Computers</a>
+                <br/> 
+                <b>Mocz, P.</b>; Szasz, A.; 2021 ApJ, 910, 29
+                </p>
+				<p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.494.2027M/abstract"> Galaxy Formation with BECDM - II. Cosmic Filaments and First Galaxies </a>
                 <br/> 
                 <b>Mocz, P.</b>; Fialkov, A.; Vogelsberger, M.; Becerra, F.; Shen, X.; Robles, V.H.; Amin, M.A.; Zavala, J.; Boylan-Kolchin, M.; Bose, S.; Marinacci, F.; Chavanis, P.H.; Lancaster, K.; Hernquist, L.; 2021 MNRAS, 494, 2021
