--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
 			<a href="https://www.llnl.gov/"><img class="img-fluid" style="height:60px;" src="img/llnl.jpg" alt=""></a>
             <a href="https://web.astro.princeton.edu/"><img class="img-fluid" style="height:60px;" src="img/princeton.png" alt=""></a>
             <a href="https://astronomy.fas.harvard.edu/"><img class="img-fluid" style="height:60px;" src="img/harvard.png" alt=""></a>
+            <a href="https://www.energy.gov/"><img class="img-fluid" style="height:60px;" src="img/doe.png" alt=""></a>
             <a href="https://www.nasa.gov/"><img class="img-fluid" style="height:60px;" src="img/nasa.png" alt=""></a>
             <a href="https://www.nsf.gov/"><img class="img-fluid" style="height:60px;" src="img/nsf.png" alt=""></a>
             <a href="https://www.xsede.org/"><img class="img-fluid" style="height:60px;" src="img/xsede2.png" alt=""></a>
