--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
 			<p>
 			  I am a Computational Physicist at <a href = "https://www.llnl.gov/">Lawrence Livermore National Laboratory</a>. 
 			  I develop high-performance multi-physics simulation code on heterogenous architectures, in particular
-			  high-order Arbitrary Lagrangian-Eulerian (ALE) finite element methods for magnetohydrodynamics (MHD) simulations.
+			  high-order Arbitrary Lagrangian-Eulerian (ALE) finite element methods for magnetohydrodynamics (MHD) simulations, 
+			  as part of the <a href = "https://computing.llnl.gov/projects/mapp">Multiphysics on Advanced Platforms Project (MAPP)</a>.
 			  I am also exploring new frontiers in the simulation of quantum systems in cosmology such as <a 
 			  href="https://physics.aps.org/synopsis-for/10.1103/PhysRevLett.123.141301"> 
 			  fuzzy dark matter</a>.
