--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
                     <h4 class="subheading">Writings on Medium</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">~100 line Python tutorials for computational astro <a href="https://philip-mocz.medium.com/">https://philip-mocz.medium.com/</a></p>
+                    <p class="text-muted">Interested in scientific computing? Check out my ~100 line Python tutorials on computational astro/physics at <a href="https://philip-mocz.medium.com/">https://philip-mocz.medium.com/</a></p>
                   </div>
                 </div>
               </li>
@@ -926,7 +926,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
                     <h4 class="subheading">April Fools Day arXiv Papers</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Check out the collection at <a href="http://april1arxiv.github.io">http://april1arxiv.github.io</a></p>
+                    <p class="text-muted">See the collection at <a href="http://april1arxiv.github.io">http://april1arxiv.github.io</a></p>
                   </div>
                 </div>
               </li>
@@ -1017,7 +1017,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </d
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/people/philip_mocz.jpg" alt="">
               <h4>Philip Mocz</h4>
-              <p class="text-muted">Einstein & Spitzer Fellow</p>
+              <p class="text-muted">Computational Physicist</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://twitter.com/PMocz">
