--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
        
             <h3 class="section-heading">Selected Recent Papers <a href="my-feed.rss.xml"><img border="0" alt="Subscribe to What's New" src="img/fZIDSoj.png" width="20" height="20"></h3>
 				<p>
-				<a href="https://arxiv.org/abs/2301.10266"> Cosmological Structure Formation and Soliton Phase Transition in Fuzzy Dark Matter with Axion Self-Interactions</a>
+				<a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.521.2608M/abstract"> Cosmological Structure Formation and Soliton Phase Transition in Fuzzy Dark Matter with Axion Self-Interactions</a>
                 <br/> 
-                <b>Mocz, P.</b>; Fialkov, A.; Vogelsberger, M.; Boylan-Kolchin, M; Chavanis, P.H.; Amin, M.A.; Bose, S.; Dome, T.; Hernquist, L.; Lancaster, L.; Notis, M.; Painter, C.; Robles, V.H.; Zavala, J.; 2023 MNRAS, accepted
+                <b>Mocz, P.</b>; Fialkov, A.; Vogelsberger, M.; Boylan-Kolchin, M; Chavanis, P.H.; Amin, M.A.; Bose, S.; Dome, T.; Hernquist, L.; Lancaster, L.; Notis, M.; Painter, C.; Robles, V.H.; Zavala, J.; 2023 MNRAS, 521, 2608
                 </p>
 				<p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2021ApJ...910...29M/abstract"> Toward Cosmological Simulations of Dark Matter on Quantum Computers</a>
