--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
               <a class="nav-link js-scroll-trigger" href="#portfolio">Research</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#people">Blog</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#people">People</a>
             </li>
             <li class="nav-item">
@@ -711,9 +714,23 @@
       </div>
     </section>
 
+    <!-- Blog -->
+    <section id="blog">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading">Blog</h2>
+            <h3 class="section-subheading text-muted">~100 line Python tutorials to intro to scientific computing, hosted on <a href="https://philip-mocz.medium.com">my Medium blog</a></h3>
+            <div class="col-lg-12 text-left">
+            <script src="//rss.bloople.net/?url=https%3A%2F%2Fphilip-mocz.medium.com%2Ffeed&limit=4&showtitle=false&type=js"></script>
+			</div>
+          </div>
+        </div>
+      </div>
+    </section> 
 
     <!-- People -->
-    <section id="people">
+    <section class="bg-light"  id="people">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -881,7 +898,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
     </section>   
 
     <!-- Teaching -->
-    <section class="bg-light"  id="teaching">
+    <section id="teaching">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -902,7 +919,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
     </section> 
     
     <!-- Outreach -->
-    <section id="outreach">
+    <section class="bg-light"  id="outreach">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -927,7 +944,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
 
 
     <!-- Miscellaneous -->
-    <section class="bg-light"  id="misc">
+    <section id="misc">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -944,7 +961,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4 class="subheading">Writings on Medium</h4>
+                    <h4 class="subheading">Medium Blog</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Interested in scientific computing? Check out my ~100 line Python tutorials on computational astro/physics at <a href="https://philip-mocz.medium.com/">https://philip-mocz.medium.com/</a></p>
@@ -1038,7 +1055,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
     </section>
 
     <!-- Contact -->
-    <section id="contact">
+    <section class="bg-light"  id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
