--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Blog</h2>
-            <h3 class="section-subheading text-muted">~100 line Python tutorials to intro to scientific computing, hosted on <a href="https://philip-mocz.medium.com">my Medium blog</a>. My latest posts are shown below</h3>
+            <h3 class="section-subheading text-muted">~100 line Python tutorials to intro to scientific computing, hosted on my Medium blog. <a href="https://philip-mocz.medium.com">Follow me</a> for updates! My latest posts are shown below</h3>
             <div class="col-lg-8 text-left">
             <script src="//rss.bloople.net/?url=https%3A%2F%2Fphilip-mocz.medium.com%2Ffeed&limit=4&showtitle=false&type=js"></script>
 			</div>
