--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <a class="nav-link js-scroll-trigger" href="#portfolio">Research</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#people">Blog</a>
+              <a class="nav-link js-scroll-trigger" href="#blog">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#people">People</a>
