--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- My blog feed -->
     <style type="text/css">
       #myblogfeed {
-        width: 300px;
+        max-width:100% !important;
       }
     </style>
     
