--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
     </style>
     
     <!-- My blog feed -->
-    <style type="text/css">
-      #myblogfeed {
-        max-width:80% !important;
-      }
-    </style>
+    <style>
+    .medium-feed-image img {
+        max-width: 300px; /* Adjust this value to your desired width */
+        height: auto;
+    }
+	</style>
     
     <script type="text/javascript" src="vis-network.min.js"></script>
     <script type="text/javascript" src="mygraph.js"></script>
