--- a/index.html
+++ b/index.html
@@ -937,8 +937,8 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
             <h3 class="section-subheading text-muted">List and links to selected outreach activities</h3>
             <div class="col-lg-12 text-left">
             <ul>
-				<li><a href="https://wci.llnl.gov/students">LLNL DSTI Research Program Mentor. </a>. 2022-2023</li>
-				<li><a href="https://cor.gsfc.nasa.gov/sigs/starssig/starssig-lc.php">NASA Cosmic Origins Transitional Leadership Team</a>. 2021-2022</li>
+				<li><a href="https://wci.llnl.gov/students">LLNL DSTI Research Program Mentor</a>. 2022, 2023</li>
+				<li><a href="https://cor.gsfc.nasa.gov/sigs/starssig/starssig-lc.php">NASA Cosmic Origins Transitional Leadership Team</a>. 2021, 2022</li>
 				<li><a href="https://www.skypeascientist.com/">Skype A Scientist</a>. 2020</li>
 				<li><a href="https://undergraduateresearch.princeton.edu/programs/summer-programs/princeton-astrophysics-undergraduate-summer-research-program">Princeton Astrophysics Undergraduate Summer Research Program</a> Mentor. 2019, 2020</li>
 				<li>Harvard Astronomy Department Peer Mentor. 2015-2017</li>
