--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Miscellaneous</h2>
+            <h2 class="section-heading">Misc.</h2>
             <h3 class="section-subheading text-muted">Writings, software projects, interactive modules, tutorials, mini science investigations ...</h3>
           </div>
         </div>
