update to flatiron institute

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="shortcut icon" href="img/llnl-logo.png">
+<link rel="icon" type="image/svg+xml" href="https://www.simonsfoundation.org/app/themes/simonsfoundation/favicon.svg" sizes="any">
 <html lang="en">
 
   <head>
@@ -155,7 +155,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-heading">Philip Mocz</div>
-          <div class="intro-lead-in">Computational Physicist at <a href = "https://www.llnl.gov/">Lawrence Livermore National Laboratory</a></div>  
+          <div class="intro-lead-in">Software Engineer at the <a href = "https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/">Flatiron Institute</a></div>  
             <div class="team-member">
           			<img class="rounded-circle img-fluid" src="img/people/philip_mocz.jpg" alt="">
 			</div>	
@@ -228,11 +228,11 @@
 			<!-- I consider myself a leading expert on computational methods for astrophysics and applying them to solve challenging problems in cosmology and turbulence. -->
 			
 			<p>
-			  I am a Computational Physicist at <a href = "https://www.llnl.gov/">Lawrence Livermore National Laboratory</a>. 
-			  I develop high-performance multi-physics simulation code on heterogenous architectures, in particular
+			  I am a computational research scientist and software engineer at the <a href = "https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/">Flatiron Institute, Center for Computational Astrophysics</a> interested in developing software for scalable high-performance multi-physics simulations integrated with modern AI techniques.
+			  Prior to joining the foundation, I was a computational physicist at the <a href = "https://www.llnl.gov/">Lawrence Livermore National Laboratory</a> where I developed high-performance multi-physics simulation code on heterogenous architectures, in particular
 			  high-order Arbitrary Lagrangian-Eulerian (ALE) finite element methods for magnetohydrodynamics (MHD) simulations, 
 			  as part of the <a href = "https://computing.llnl.gov/projects/mapp">Multiphysics on Advanced Platforms Project (MAPP)</a>.
-			  I am also exploring new frontiers in the simulation of quantum systems in cosmology such as <a 
+			  I also have in interest in simulating cosmological dark matter models, such as <a 
 			  href="https://physics.aps.org/synopsis-for/10.1103/PhysRevLett.123.141301"> 
 			  fuzzy dark matter</a>.
 			</p>
@@ -271,6 +271,7 @@
             
             <p>
 			<center>
+			<a href="https://www.simonsfoundation.org/flatiron/"><img class="img-fluid" style="height:60px;" src="img/sf.png" alt=""></a>
 			<a href="https://www.llnl.gov/"><img class="img-fluid" style="height:60px;" src="img/llnl.jpg" alt=""></a>
             <a href="https://web.astro.princeton.edu/"><img class="img-fluid" style="height:60px;" src="img/princeton.png" alt=""></a>
             <a href="https://astronomy.fas.harvard.edu/"><img class="img-fluid" style="height:60px;" src="img/harvard.png" alt=""></a>
@@ -1131,13 +1132,13 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
               </ul>
             </div>
 			<p> </p>
-            <p> <a href="mailto:mocz1@llnl.gov"><img src="img/mail-icon.png" style="width:1em;margin-right:.5em;" alt="">mocz1@llnl.gov</a> </p>
+            <p> <a href="mailto:pmocz@flatironinstitute.org"><img src="img/mail-icon.png" style="width:1em;margin-right:.5em;" alt="">pmocz@flatironinstitute.org</a> </p>
             <a href="https://orcid.org/0000-0001-6631-2566" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-6631-2566</a>
             <p> </p>
             <ul class="list-inline">
-              <li>Lawrence Livermore National Laboratory</li>
-              <li>7000 East Ave</li>
-              <li>Livermore, CA 94550, USA</li>
+              <li>Center for Computational Astrophysics, Flatiron Institute,</li>
+              <li>162 Fifth Avenue</li>
+              <li>New York, NY 10010, USA</li>
             </ul>
             <p class="text-muted">Philip Mocz pronounced:&nbsp;
             <audio controls=""><source src="philip_mocz_pronunciation.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></p>
@@ -1163,7 +1164,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <span class="copyright">&copy;2012-2023 Philip Mocz</span>
+            <span class="copyright">&copy;2012-2024 Philip Mocz</span>
           </div>
         </div>
       </div>
