--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://twitter.com/PMocz">
-                    <i class="fa fa-x-twitter"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
@@ -1083,7 +1083,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://twitter.com/PMocz">
-                    <i class="fa fa-x-twitter"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
